製作歡迎畫面&遊戲導入畫面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Smart_Gophers</string>
+    <string name="smart_gophers">Smart_Gophers</string>
 </resources>
